# carina

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  example.crn
.github/workflows/: ci.yml
carina-cli/: Cargo.toml
carina-cli/src/: main.rs
carina-codegen/: Cargo.toml
carina-codegen/src/: main.rs
carina-core/src/: differ.rs  interpreter.rs  lib.rs  module.rs  module_resolver.rs  plan.rs  provider.rs  resource.rs  schema.rs
carina-core/src/formatter/: carina_fmt.pest  config.rs  cst.rs  cst_builder.rs  format.rs  mod.rs  parser.rs
carina-core/src/parser/: carina.pest  mod.rs
carina-core/src/providers/: ec2.rs  mod.rs  s3.rs
carina-lsp/: Cargo.toml
carina-lsp/src/: backend.rs  completion.rs  diagnostics.rs  hover.rs  semantic_tokens.rs
carina-provider-aws/: Cargo.toml  build.rs
carina-provider-aws/src/: case_convert.rs  lib.rs  validation.rs
carina-provider-aws/src/schemas/: mod.rs  s3.rs  types.rs  vpc.rs
carina-provider-awscc/: Cargo.toml
carina-provider-awscc/scripts/: generate-schemas.sh
carina-provider-awscc/src/: lib.rs  provider.rs  resources.rs  utils.rs
carina-provider-awscc/src/schemas/: mod.rs  vpc.rs
carina-state/: Cargo.toml
carina-state/src/: backend.rs  lib.rs  lock.rs  state.rs
carina-state/src/backends/: local.rs  mod.rs  s3.rs
docs/: resources.md
examples/: README.md  backend.crn  main_with_module.crn
examples/aws-s3/: main.crn
examples/aws-vpc/: main.crn
examples/awscc-simple-test/: main.crn
examples/awscc-vpc/: main.crn
examples/awscc-vpc-module-example/: main.crn
examples/modules/awscc-vpc-module/: main.crn
examples/modules/web_tier/: main.crn
schemas/: AWS_S3_Bucket.json
scripts/: fetch-cf-schemas.sh  generate-awscc-schemas.sh  pre-commit  setup-hooks.sh
