[package]
name = "carina-cli"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "carina"
path = "src/main.rs"

[dependencies]
carina-core = { path = "../carina-core" }
carina-provider-aws = { path = "../carina-provider-aws" }
carina-state = { path = "../carina-state" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
colored = "3"
serde_json = "1"
similar = "2"
