[package]
name = "carina-codegen"
version = "0.1.0"
edition = "2021"
description = "Code generator for Carina provider schemas from CloudFormation"

[[bin]]
name = "carina-codegen"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
heck = "0.5"
anyhow = "1.0"
