[package]
name = "carina-lsp"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "carina-lsp"
path = "src/main.rs"

[dependencies]
carina-core = { path = "../carina-core" }
carina-provider-aws = { path = "../carina-provider-aws" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }
dashmap = "6"
ropey = "1"
pest = "2"
log = "0.4"
env_logger = "0.11"
