[package]
name = "carina-provider-aws"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
carina-core = { path = "../carina-core" }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-cloudcontrol = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
typify = "0.4"
serde_json = "1"
prettyplease = "0.2"
syn = "2"
