[package]
name = "carina-provider-awscc"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
carina-core = { path = "../carina-core" }
aws-config = "1"
aws-sdk-cloudcontrol = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
