[package]
name = "carina-provider-awscc"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "codegen"
path = "src/bin/codegen.rs"

[dependencies]
carina-core = { path = "../carina-core" }
aws-config = "1"
aws-sdk-cloudcontrol = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
heck = "0.5"
regex = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
