[package]
name = "carina-state"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "State management for Carina infrastructure tool"

[dependencies]
carina-core = { path = "../carina-core" }
aws-config = "1"
aws-sdk-s3 = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
thiserror = "2"
hostname = "0.4"
